finished the automaton

--- a/latex/final-project.tex
+++ b/latex/final-project.tex
@@ -25,7 +25,7 @@ initial text=$ $, % sets the text that appears on the start arrow
 \usepackage{titling}
 \setlength{\droptitle}{-2em}  
 
-\title{EECS 510 Final Project}
+\title{Grammar and Automaton}
 \author{Andrew Huang and John Rader}
 \date{May 2025}
 \begin{document}
@@ -40,12 +40,6 @@ rightmargin=10pt
 }
 
 \begin{mylist}
-
-\item General Description
-
-blah blah blah \\
-testing doing this locally i guess if it compiles, it compiles \\
-testing again
 
 \item Grammar for the Language
 
@@ -64,21 +58,21 @@ Move Name for each State (Paired together for general buttons/functionality): \\
     $q_{bb3}$ & Big Bang III \\
     $q_{bb4}$ & Big Bang IV \\
     $q_{bbf}$ & Big Bang Finisher\\
-    $q_{sb1}$ & Spinning Bludgeon (Time 0)\\
-    $q_{sb2}$ & Spinning Bludgeon (Time 1)\\
-    $q_{sb3}$ & Spinning Bludgeon (Time 2)\\
+    $q_{sb1}$ & Spinning Bludgeon (Time 1)\\
+    $q_{sb2}$ & Spinning Bludgeon (Time 2)\\
+    $q_{sb3}$ & Spinning Bludgeon (Time 3)\\
     $q_{sss}$ & Spinning Side Smash\\
     $q_{sfu}$ & Spinning Follow Up\\
     $q_{ssu}$ & Spinning Strong Upswing\\
-    $q_{c1}$ & Charge (Time 0)\\
-    $q_{c2}$ & Charge (Time 1)\\
-    $q_{c3}$ & Charge (Time 2)\\
+    $q_{c1}$ & Charge (Time 1)\\
+    $q_{c2}$ & Charge (Time 2)\\
+    $q_{c3}$ & Charge (Time 3)\\
     $q_{csb}$ & Charged Side Blow\\
     $q_{cu}$ & Charged Upswing\\
     $q_{cbb}$ & Charged Big Bang\\
     $q_{cfu}$ & Charged Follow-up\\
-    $q_{mc1}$ & Mighty Charge (Time 0)\\
-    $q_{mc2}$ & Mighty Charge (Time 1)\\
+    $q_{mc1}$ & Mighty Charge (Time 1)\\
+    $q_{mc2}$ & Mighty Charge (Time 2)\\
     $q_{mcu}$ & Mighty Charge Upswing\\
     $q_{mcs}$ & Mighty Charge Slam\\
     $q_{fben}$ & Focus Blow: Earthquake (No Wound)\\
@@ -268,9 +262,7 @@ S is the initial variable for the beginning of a combo
 
 \restoregeometry
 \newpage
-\item Data Structure
 
-\item Testing
 
 \end{mylist}
 
