--- a/latex/final-project.tex
+++ b/latex/final-project.tex
@@ -85,9 +85,9 @@ S is the initial variable for the beginning of a combo
 \begin{align*}
 &S \rightarrow yq_{os1} \, | \, bq_{bb1} \, | \, rq_{c1} \, | \, fq_{fben} \, | \, fq_{fbew1} \, | \, yq_{ss} \, | \, \lambda \\
 %basic side smash/overhead 1 --> overhead 2 --> overhead 3
-&q_{ss} \rightarrow yq_{os2} \, | \, b{q_bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, \lambda\\
-&q_{os1} \rightarrow yq_{os2} \, | \, b{q_bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, \lambda\\
-&q_{os2} \rightarrow yq_{u} \, | \, b{q_bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, \lambda\\
+&q_{ss} \rightarrow yq_{os2} \, | \, bq_{bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, \lambda\\
+&q_{os1} \rightarrow yq_{os2} \, | \, bq_{bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, \lambda\\
+&q_{os2} \rightarrow yq_{u} \, | \, bq_{bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, \lambda\\
 &q_{u} \rightarrow bq_{bb1} \, | \, rq_{c1} \, | \,cq_{sb1} \, | \, dq_{mc1} \, | \, \lambda\\
 %big bang
 &q_{bb1} \rightarrow bq_{bb2} \, | \, rq_{c1} \, | \, \lambda \\ 
