--- a/latex/final-project.tex
+++ b/latex/final-project.tex
@@ -104,7 +104,7 @@ S is the initial variable for the beginning of a combo
 &q_{ssu} \rightarrow yq_{os1} \, | \, bq_{bb1} \, | \, rq_{c1} \, | \, dq_{mc1}\, | \, \lambda\\ 
 %charge
 &q_{c1} \rightarrow q_{c2} \, | \,  rq_{csb} \, | \, yq_{csb} \, | \, fq_{fben} \, | \, fq_{fbew1}\\ 
-&q_{c2} \rightarrow q_{c3} \, | \,  rq_{csu} \, | \, yq_{csu} \, | \, fq_{fben} \, | \, fq_{fbew1}\\ 
+&q_{c2} \rightarrow q_{c3} \, | \,  rq_{cu} \, | \, yq_{cu} \, | \, fq_{fben} \, | \, fq_{fbew1}\\ 
 &q_{c3} \rightarrow rq_{cbb} \, | \,  yq_{cbb} \, | \, cq_{mc1} \, | \, fq_{fben} \, | \, fq_{fbew1}\ \\ 
 &q_{csb} \rightarrow yq_{cfu} \, | \,  bq_{ss} \, | \, rq_{c1} \, | \, \lambda \\ 
 &q_{cu} \rightarrow yq_{cfu} \, | \,  bq_{bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, \lambda \\ 
